Add command line for Allocate